# fastcontainer

./: .envrc  .gitignore  README.md  README.txt  fastcontainer.py  fastcontainer.sh  prepare.yaml  pyproject.toml
sample/: build.sh  sample-llama-cpp.sh  sample-llama-cpp.yaml  sample.sh  sample.yaml  ubuntu24.04-cu132-llama-cpp.sh  ubuntu24.04-cu132-llama-cpp.yaml
scr/: project-to-prompt.sh
scripts/: project-to-prompt.sh
src/fastcontainer/: __init__.py  __main__.py  btrfs.py  builder.py  cli.py  fastcontainer.py  log.py  models.py  nspawn.py  utils.py
